# ledgerline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo.tape
ledgerline/: __init__.py  accounts.py  categorize.py  cli.py  db.py  demo.py  llm.py  mcp_server.py  money.py  normalize.py  query.py  recurring.py
ledgerline/connectors/: simplefin.py
ledgerline/ingest/: __init__.py  csv_generic.py  ofx.py  profiles.py  types.py
ledgerline/migrations/: 002_account_balances.sql  003_recurring_scope.sql  004_sync_state.sql
migrations/: 001_init.sql  005_account_context.sql  006_account_analysis_treatment.sql
tests/: conftest.py  test_accounts.py  test_categorize.py  test_cli.py  test_demo.py  test_ingest.py  test_mcp_server.py  test_money.py  test_normalize.py  test_query.py  test_recurring.py  test_security.py  test_sync.py
tests/fixtures/: generic_visa_jan.csv  malformed.csv  overlap_1.csv  overlap_2.csv  sample.ofx  us_checking_jan.csv
